styled some links

--- a/public/birthday-invite.html
+++ b/public/birthday-invite.html
@@ -45,6 +45,9 @@
             list-style-position: inside;
             
         }
+        a{
+            color: black;
+        }
     </style>
 
 </body>
