--- a/public/contact.html
+++ b/public/contact.html
@@ -20,9 +20,7 @@
       </ul>
     </p>
     <hr width="500"/>
-
-    <a href="../index.html" class="homeLink">Head Home</a>
-
+    <a id="home-link" href="../index.html">Home</a>
   </div>
 
   <style>
@@ -35,6 +33,10 @@
     #list-item-one{
       margin-right: 89px;
     }
+    #home-link{
+      color: black;
+    }
+    
   </style>
 </body>
 </html>
