updated some content

--- a/index.html
+++ b/index.html
@@ -4,14 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bailey's Porfolio</title>
-
-    
 </head>
 <body>
     <div class="content-wrapper">
         <div class="title-wrapper">
             <H1>Bailey Ross-Wray's Porfolio</H1>
-            <p>take a look at my work bellow</p>
+            <p>
+                Take a look at my work bellow
+                <br />Please note: the site is not yet designed to scale with
+                mobile device screens
+            </p>
             <hr width="500"/>
         </div>
 
