--- a/public/about.html
+++ b/public/about.html
@@ -6,33 +6,141 @@
   <title>About Me</title>
 </head>
 <body>
-    <h1 id="title-line">About Me</h1>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque sem tellus, sagittis non odio nec, interdum
-      elementum lacus. Ut ac justo eget risus sollicitudin fringilla sed ut leo. Ut condimentum elit nec fermentum lobortis.
-      Quisque tincidunt quam nec tincidunt ullamcorper. Integer vitae pretium justo. In placerat volutpat pellentesque.
-      Etiam
-      gravida quam vitae odio pulvinar imperdiet. Vivamus venenatis gravida purus sit amet aliquet. Ut in nibh sed quam
-      laoreet lacinia. Cras cursus ut dui vitae posuere. Vivamus volutpat urna vitae odio fringilla placerat. Nulla vel
-      rhoncus sapien. Phasellus at interdum enim.</p>
+  <div class="content-super-wraper">
+    <h1>About Me</h1>
+    <h2>Education:</h2>
+    <p class="content-detail-text">
+      I attended Charles Dickens Secondary school where 
+      I studied at GCSE Level in the subjects bellow.
+    </p>
+  
+    <table class="content-education-table">
+      <tr id="content-education-table-row-one">
+        <td class="content-education-table-cell">
+          Subject:
+        </td>
+        <td class="content-education-table-cell">
+          English Lit
+        </td>
+        <td class="content-education-table-cell">
+          English Lang
+        </td>
+        <td class="content-education-table-cell">
+          Maths
+        </td>
+        <td class="content-education-table-cell">
+          Computer science
+        </td>
+        <td class="content-education-table-cell">
+          Sociology
+        </td>
+        <td class="content-education-table-cell">
+          Geography
+        </td>
+        <td class="content-education-table-cell">
+          Physics
+        </td>
+        <td class="content-education-table-cell">
+          Biology
+        </td>
+        <td class="content-education-table-cell">
+          Chemistry
+        </td>
+      </tr>
+      <tr>
+        <td class="content-education-table-cell">Grade's:</td>
+        <td class="content-education-table-cell">Grade 4</td>
+        <td class="content-education-table-cell">Grade 5</td>
+        <td class="content-education-table-cell">Grade 4</td>
+        <td class="content-education-table-cell">Grade 5</td>
+        <td class="content-education-table-cell">Grade 5</td>
+        <td class="content-education-table-cell">Grade 4</td>
+        <td class="content-education-table-cell">Grade 5</td>
+        <td class="content-education-table-cell">Grade 5</td>
+        <td class="content-education-table-cell">Grade 5</td>
+      </tr>
+    </table>
+    <p class="content-detail-text">
+      After completing my secondary school education I enrold at Broadstairs College
+      where I studied computing at Level 3 BTEC level. This is where i trully found
+      my passion for programming and computers in general.
+    </p>
+    <table class="content-education-table">
+      <tr>
+        <td class="content-education-table-cell">
+          Subject:
+        </td>
+        <td class="content-education-table-cell">
+          Computing (Level 3 BTEC)
+        </td>
+      </tr>
+      <tr>
+        <td class="content-education-table-cell">
+          Grade:
+        </td>
+        <td class="content-education-table-cell">
+          Triple Grade DDM
+        </td>
+      </tr>
+    </table>
 
-    <p>Curabitur elementum sagittis mollis. In porta nec quam ut semper. Nulla volutpat neque quis lacus mattis eleifend.
-      Phasellus et congue odio. Mauris tristique, nisl quis porttitor porttitor, tortor ante mattis ex, at dictum tortor
-      dolor
-      ut sem. Nullam nec libero non ex porta vulputate a eu sapien. In nec bibendum mauris. Fusce iaculis lectus vel magna
-      laoreet gravida.</p>
+    <h2>Programming Career</h2>
+    <p class="content-detail-text">
+      I started programming in secondary school computing classes in the language Python
+      at first I thought it was cool but I wasn't a massive fan of programming probably
+      because I didn't work on any real programs and spent most the time learning how
+      computers worked. I also learned some HTML and CSS but didnt pay much attention
+      as I didnt think it was very intresting at the time. It wasn't till I got to
+      College that I found my love for programming and started to see a career as a programmer.
+      In College I started to trully foucus on learning to program started to get good at
+      Python. At this time I still wasnt intersted in Web Development as I wasn't good at
+      HTML, hardly touched CSS and thought Javascript was a confusing Programming language.
+      I completed my National Extended Diploma in Computing and continude coding in Python
+      I also used some Java in college which I stopped persuing for lack of motivation.
+      After realising I was only really proficent in Python I began to investigate Career paths.
+      still havent decided what job i would like to specalise in but I did decided to learn Web
+      Development so i had a set of skills to land my first job in the Tech Enviroment.
+    </p>
 
-    <p>Donec euismod vestibulum arcu, a blandit metus mattis ultrices. Integer quis hendrerit justo. Maecenas sed tempor mi.
-      Fusce egestas urna leo. Mauris viverra sem sed libero egestas, volutpat aliquet magna porta. Quisque id diam sed ipsum
-      interdum sollicitudin id quis augue. Donec congue nisl nec massa ornare imperdiet quis quis odio. Etiam ut volutpat
-      nisl. Vestibulum hendrerit justo nibh, eget consequat magna fermentum finibus. Pellentesque et urna fringilla, rutrum
-      neque in, varius leo. Vestibulum efficitur id massa eget pellentesque.</p>
+    <h2>The Future</h2>
+    <p class="content-detail-text">
+      As you can see I still haven't settled on the career specifics that I would like
+      to specalise In yet but I am learning Web Development in an aim to fall in love with
+      it or rule it out as an option either way I am exited to see how far my knowledge
+      can grow and what I can atchive.
+    </p>
+
+  </div>
 
   <style>
-    table{
+    h1{
+      text-decoration: underline;
+    }
+    .content-super-wraper{
+      text-align: center;
+      margin-left: 60px;
+      margin-right: 60px;
+    }
+    .content-education-table{
+      margin-left: auto;
+      margin-right: auto;
+      border: 5px solid #cee6f0;
+    }
+    .content-education-table-cell{
+      border: 5px solid white;
+      border-collapse: collapse;
+      background-color: #cee6f0;
+      height: 20px;
+    }
+    .content-detail-text{
+      margin-left: 150px;
+      margin-right: 150px;
+    }
+    .footer-table{
       margin-left: auto;
       margin-right: auto;
     }
-    td{
+    #footer-home{
       padding-left: 10px;
     }
     #title-line{
@@ -43,11 +151,11 @@
     }
   </style>
 
-  <hr />
-  <table>
+  <hr width="600"/>
+  <table class="footer-table">
     <tr>
-      <td><a href="./contact.html">Click here to contact me</a></td>
-      <td><a href="../index.html">Click here to go home</a></td>
+      <td id="footer-contact"><a href="./contact.html">Click here to contact me</a></td>
+      <td id="footer-home"><a href="../index.html">Click here to go home</a></td>
     </tr>
   </table>
 </body>
