Changed placeholder project for a real project

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                     <td><a href="./public/contact.html">
                         <img src="./assets/images/contact.png" alt="Contact Me - Image" width="200" height="200">
                     </a></td>
-                    <td id="project-table-row-four-entry-two"><a href="./public/movie-ranking.html">
+                    <td id="project-table-row-four-entry-two"><a href="./public/p.html">
                         <img src="./assets/images/movie-ranking.png" alt="Movie Ranking - Image" width="200" height="200">
                     </a></td>
                 </tr>
