Fixed a bug where the new page was not linked to the index page

--- a/public/password-gen-prodject.html
+++ b/public/password-gen-prodject.html
@@ -25,17 +25,25 @@
     width="350">
     
     <h3>The Implimentation</h3>
-    <p>First paragraph. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
-        aliqua. Arcu cursus vitae congue mauris. In nisl nisi scelerisque eu ultrices vitae auctor eu augue. Nisi est sit amet
-        facilisis magna. Diam sit amet nisl suscipit adipiscing bibendum est ultricies integer. Quis ipsum suspendisse ultrices
-        gravida dictum fusce ut.</p>
+    <p>
+        At first I was only going to program the password Generator function of the program
+        but after that was complete I realised I wanted to add some extra utility to the program
+        to test my skills. Curently the program can Generate, save and display passwords
+        and randomised string usernames. The main feature id like to add to the program is
+        a encrypt and decrypt function that allows the Generated passwords to not be stored
+        in plain text which is not secure. The program allows the user to generate passwords 
+        between the lengths of 4 and 24 and up to 20 at a time.
+    </p>
+    <img src="../assets/images/account-tool-password-gen.png" alt="Password Generation - Image"
+    height="200" width="350">
     
     <h3>How its turned out</h3>
     <p>
-        First paragraph. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
-        aliqua. Arcu cursus vitae congue mauris. In nisl nisi scelerisque eu ultrices vitae auctor eu augue. Nisi est sit amet
-        facilisis magna. Diam sit amet nisl suscipit adipiscing bibendum est ultricies integer. Quis ipsum suspendisse ultrices
-        gravida dictum fusce ut.
+        The project, In my opinion, is a success and fulfills the goal I had.
+        This project was the first real piece of softwear I made to fulfill a 
+        purpose and i belive that the program is efficent and user friendly.
+        If youd like to download the softwear you can find it on my Github account 
+        <a href="https://github.com/zzixM/zzixMs-account-tool">here.</a>
     </p>
     <hr />
     <p id="footer-home"><a id="footer-home-link" href="../index.html">Click here to go home</a></p>
