--- a/index.html
+++ b/index.html
@@ -34,14 +34,14 @@
                 </tr>
                 <tr>
                     <td><h2>Contact Me Page</h2></td>
-                    <td id="project-table-row-three-entry-two"><h2>Movie Review page</h2></td>
+                    <td id="project-table-row-three-entry-two"><h2>Password Generate Prodject</h2></td>
                 </tr>
                 <tr>
                     <td><a href="./public/contact.html">
                         <img src="./assets/images/contact.png" alt="Contact Me - Image" width="200" height="200">
                     </a></td>
-                    <td id="project-table-row-four-entry-two"><a href="./public/p.html">
-                        <img src="./assets/images/movie-ranking.png" alt="Movie Ranking - Image" width="200" height="200">
+                    <td id="project-table-row-four-entry-two"><a href="./public/password-gen-prodject.html">
+                        <img src="./assets/images/account-tool-menu.png" alt="Account Tool - Image" width="200" height="200">
                     </a></td>
                 </tr>
             </table>
