added new prodject page

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                     <td id="project-table-row-one-entry-two"><h2>About Page</h2></td>
                 </tr>
                 <tr>
-                    <td><a href="./public/birthday-invite.html">
+                    <td><a href="./public/awack-prodject.html">
                         <img src="./assets/images/birthday-invite.png" alt="Birthday Invitation - Image" width="200"
                         height="200">
                     </a></td>
