--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 </tr>
                 <tr>
                     <td><a href="./public/awack-prodject.html">
-                        <img src="./assets/images/birthday-invite.png" alt="Birthday Invitation - Image" width="200"
+                        <img src="./assets/images/awack-help-menu.png" alt="Prodject Awack - Image" width="200"
                         height="200">
                     </a></td>
                     <td id="project-table-row-two-entry-two"><a href="./public/about.html">
