--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div class="project-display-wrapper">
             <table id="project-table">
                 <tr>
-                    <td><H2>Birthday Invitation</H2></td>
+                    <td><H2>Prodject Awack</H2></td>
                     <td id="project-table-row-one-entry-two"><h2>About Page</h2></td>
                 </tr>
                 <tr>
