--- a/public/about.html
+++ b/public/about.html
@@ -113,10 +113,8 @@
   </div>
 
   <style>
-    h1{
-      text-decoration: underline;
-    }
-    .content-super-wraper{
+    @media (min-width: 1600px) {
+      .content-super-wraper{
       text-align: center;
       margin-left: 60px;
       margin-right: 60px;
@@ -136,6 +134,11 @@
       margin-left: 150px;
       margin-right: 150px;
     }
+    }
+    h1{
+      text-decoration: underline;
+    }
+
     .footer-table{
       margin-left: auto;
       margin-right: auto;
