changed some text size's for footers

--- a/index.html
+++ b/index.html
@@ -91,6 +91,10 @@
             color: black;
         }
 
+        #footer-contact-me{
+            font-size: 1.5rem;
+        }
+
     </style>
 
     <footer>
