--- a/public/about.html
+++ b/public/about.html
@@ -143,6 +143,10 @@
       margin-left: auto;
       margin-right: auto;
     }
+    .footer-table td{
+      font-size: 1.5rem;
+    }
+    
     #footer-home{
       padding-left: 10px;
     }
