--- a/public/contact.html
+++ b/public/contact.html
@@ -20,8 +20,11 @@
       </ul>
     </p>
     <hr width="500"/>
-    <a id="home-link" href="../index.html">Home</a>
+    
   </div>
+  <footer>
+    <a id="home-link" href="../index.html">Home</a>
+  </footer>
 
   <style>
     .content-wrapper{
@@ -34,7 +37,10 @@
       margin-right: 89px;
     }
     #home-link{
+      position: relative;
+      left: 50%;
       color: black;
+      font-size: 1.5rem;
     }
     
   </style>
