--- a/public/about.html
+++ b/public/about.html
@@ -62,7 +62,7 @@
     </table>
     <p class="content-detail-text">
       After completing my secondary school education I enrold at Broadstairs College
-      where I studied computing at Level 3 BTEC level. This is where i trully found
+      where I studied computing at Level 3 BTEC level. This is where I trully found
       my passion for programming and computers in general.
     </p>
     <table class="content-education-table">
@@ -118,33 +118,69 @@
       text-align: center;
       margin-left: 60px;
       margin-right: 60px;
-    }
+      }
     .content-education-table{
       margin-left: auto;
       margin-right: auto;
       border: 5px solid #cee6f0;
-    }
+      }
     .content-education-table-cell{
       border: 5px solid white;
       border-collapse: collapse;
       background-color: #cee6f0;
       height: 20px;
-    }
+      }
     .content-detail-text{
       margin-left: 150px;
       margin-right: 150px;
-    }
-    }
-    h1{
-      text-decoration: underline;
+      width: 50%;
+      }
     }
 
+
+    h1{
+      text-decoration: underline;
+      text-align: center;
+    }
+    h2{
+      margin-left: 30px;
+      margin-right: 30px;
+    }
+    .content-super-wraper{
+      text-align: center;
+      margin-left: auto;
+      margin-right: auto;
+      width: 100%;
+      }
+    .content-education-table{
+      border: 5px solid #cee6f0;
+      width: 70%;
+      margin-left: auto;
+      margin-right: auto;
+      table-layout:fixed;
+    }
+    .content-education-table-cell{
+      border: 1px solid white;
+      border-collapse: collapse;
+      background-color: #cee6f0;
+      font-size: 0.8rem;
+      width: 20px;
+      overflow: hidden; 
+      text-overflow: ellipsis; 
+      word-wrap: break-word;
+    }
     .footer-table{
       margin-left: auto;
       margin-right: auto;
     }
     .footer-table td{
       font-size: 1.5rem;
+    }
+    .content-detail-text{
+      margin-left: auto;
+      margin-right: auto;
+      width: 50%;
+      text-align: left;
     }
     
     #footer-home{
