--- a/public/about.html
+++ b/public/about.html
@@ -116,8 +116,6 @@
     @media (min-width: 1600px) {
       .content-super-wraper{
       text-align: center;
-      margin-left: 60px;
-      margin-right: 60px;
       }
     .content-education-table{
       margin-left: auto;
@@ -155,7 +153,7 @@
       }
     .content-education-table{
       border: 5px solid #cee6f0;
-      width: 70%;
+      width: 100%;
       margin-left: auto;
       margin-right: auto;
       table-layout:fixed;
@@ -195,7 +193,7 @@
     }
   </style>
 
-  <hr width="600"/>
+  <hr width="100%"/>
   <table class="footer-table">
     <tr>
       <td id="footer-contact"><a href="./contact.html">Click here to contact me</a></td>
