redesigned about.html education table

--- a/public/about.html
+++ b/public/about.html
@@ -16,50 +16,47 @@
   
     <table class="content-education-table">
       <tr id="content-education-table-row-one">
-        <td class="content-education-table-cell">
-          Subject:
-        </td>
-        <td class="content-education-table-cell">
-          English Lit
-        </td>
-        <td class="content-education-table-cell">
-          English Lang
-        </td>
-        <td class="content-education-table-cell">
-          Maths
-        </td>
-        <td class="content-education-table-cell">
-          Computer science
-        </td>
-        <td class="content-education-table-cell">
-          Sociology
-        </td>
-        <td class="content-education-table-cell">
-          Geography
-        </td>
-        <td class="content-education-table-cell">
-          Physics
-        </td>
-        <td class="content-education-table-cell">
-          Biology
-        </td>
-        <td class="content-education-table-cell">
-          Chemistry
-        </td>
+          <td>Subject:</td>
+          <td>Grades:</td>
+      </tr>
+      <tr id="content-education-table-row-two">
+          <td class="content-education-table-cell">English Lit</td>
+          <td class="content-education-table-cell">Grade 4</td>
       </tr>
       <tr>
-        <td class="content-education-table-cell">Grade's:</td>
-        <td class="content-education-table-cell">Grade 4</td>
-        <td class="content-education-table-cell">Grade 5</td>
-        <td class="content-education-table-cell">Grade 4</td>
-        <td class="content-education-table-cell">Grade 5</td>
-        <td class="content-education-table-cell">Grade 5</td>
-        <td class="content-education-table-cell">Grade 4</td>
-        <td class="content-education-table-cell">Grade 5</td>
-        <td class="content-education-table-cell">Grade 5</td>
-        <td class="content-education-table-cell">Grade 5</td>
+          <td class="content-education-table-cell">English Lang</td>
+          <td class="content-education-table-cell">Grade 5</td>
       </tr>
-    </table>
+      <tr>
+          <td class="content-education-table-cell">Maths</td>
+          <td class="content-education-table-cell">Grade 4</td>
+      </tr>
+      <tr>
+          <td class="content-education-table-cell">Computer science</td>
+          <td class="content-education-table-cell">Grade 5</td>
+      </tr>
+      <tr>
+          <td class="content-education-table-cell">Sociology</td>
+          <td class="content-education-table-cell">Grade 5</td>
+      </tr>
+      <tr>
+          <td class="content-education-table-cell">Geography</td>
+          <td class="content-education-table-cell">Grade 4</td>
+      </tr>
+      <tr>
+          <td class="content-education-table-cell">Physics</td>
+          <td class="content-education-table-cell">Grade 5</td>
+      </tr>
+      <tr>
+          <td class="content-education-table-cell">Biology</td>
+          <td class="content-education-table-cell">Grade 5</td>
+      </tr>
+      <tr>
+          <td class="content-education-table-cell">Chemistry</td>
+          <td class="content-education-table-cell">Grade 5</td>
+      </tr>
+      
+  </table>
     <p class="content-detail-text">
       After completing my secondary school education I enrold at Broadstairs College
       where I studied computing at Level 3 BTEC level. This is where I trully found
@@ -113,29 +110,6 @@
   </div>
 
   <style>
-    @media (min-width: 1600px) {
-      .content-super-wraper{
-      text-align: center;
-      }
-    .content-education-table{
-      margin-left: auto;
-      margin-right: auto;
-      border: 5px solid #cee6f0;
-      }
-    .content-education-table-cell{
-      border: 5px solid white;
-      border-collapse: collapse;
-      background-color: #cee6f0;
-      height: 20px;
-      }
-    .content-detail-text{
-      margin-left: 150px;
-      margin-right: 150px;
-      width: 50%;
-      text-align: left;
-      }
-    }
-
 
     h1{
       text-decoration: underline;
@@ -191,6 +165,32 @@
     a{
       color: black;
     }
+
+
+    @media (min-width: 680px) {
+      .content-super-wraper{
+      text-align: center;
+      }
+    .content-education-table{
+      margin-left: auto;
+      margin-right: auto;
+      border: 5px solid #cee6f0;
+      width: 50%;
+      }
+    .content-education-table-cell{
+      border: 5px solid white;
+      border-collapse: collapse;
+      background-color: #cee6f0;
+      height: 20px;
+      }
+    .content-detail-text{
+      margin-left: auto;
+      margin-right: auto;
+      width: 50%;
+      text-align: left;
+      }
+    }
+
   </style>
 
   <hr width="100%"/>
