updated some "hr" element widths

--- a/public/awack-prodject.html
+++ b/public/awack-prodject.html
@@ -10,7 +10,7 @@
     
     <h1>Project: Awack</h1>
     <h2>A Multi purpose Discord Bot to automate servers</h2>
-    <hr />
+    <hr width="100%"/>
 
     <h3>The Aim of the project</h3>
     <p>
@@ -46,7 +46,7 @@
         if youd like to add the bot to your surver thr link is
         <a href="https://discord.com/api/oauth2/authorize?client_id=938071040544878593&permissions=8&scope=bot">here.</a>
     </p>
-    <hr />
+    <hr width="100%"/>
     <p id="footer-home"><a id="footer-home-link" href="../index.html">Click here to go home</a></p>
     
     <style>
