--- a/public/contact.html
+++ b/public/contact.html
@@ -9,7 +9,7 @@
   <div class="content-wrapper">
 
     <h1>Contact Me</h1>
-    <hr width="500"/>
+    <hr width="100%"/>
 
     <p>Tel: +44 (0) 7518819238</p>
     <p><a href="https://gmail.com">Email: baileyrosswray@gmail.com</a></p>
@@ -19,7 +19,7 @@
         <li><a href="https://twitter.com/AwackTeam">My Discord Bots Twitter</a></li>
       </ul>
     </p>
-    <hr width="500"/>
+    <hr width="100%"/>
     
   </div>
   <footer>
