--- a/public/password-gen-prodject.html
+++ b/public/password-gen-prodject.html
@@ -10,7 +10,7 @@
     
     <h1>Password and Username Generator</h1>
     <h2>Randomly Generated Passwords in a commandline program</h2>
-    <hr />
+    <hr width="100%"/>
 
     <h3>The Aim of the project</h3>
     <p>
@@ -45,7 +45,7 @@
         If youd like to download the softwear you can find it on my Github account 
         <a href="https://github.com/zzixM/zzixMs-account-tool">here.</a>
     </p>
-    <hr />
+    <hr width="100%"/>
     <p id="footer-home"><a id="footer-home-link" href="../index.html">Click here to go home</a></p>
     
     <style>
