added new flexbox prodject to portfolio

--- a/index.html
+++ b/index.html
@@ -33,12 +33,12 @@
                     </a></td>
                 </tr>
                 <tr>
-                    <td><h2>Contact Me Page</h2></td>
+                    <td><h2>Pricing Table</h2></td>
                     <td id="project-table-row-three-entry-two"><h2>Password Generate Prodject</h2></td>
                 </tr>
                 <tr>
-                    <td><a href="./public/contact.html">
-                        <img src="./assets/images/contact.png" alt="Contact Me - Image" width="200" height="200">
+                    <td><a href="./public/pricing-table.html">
+                        <img src="./assets/images/pricing-table.png" alt="Pricing Table - Image" width="200" height="200">
                     </a></td>
                     <td id="project-table-row-four-entry-two"><a href="./public/password-gen-prodject.html">
                         <img src="./assets/images/account-tool-menu.png" alt="Account Tool - Image" width="200" height="200">
