--- a/public/pricing-table.html
+++ b/public/pricing-table.html
@@ -15,7 +15,7 @@
         .pricing-container{
         display: flex;
         flex-direction: column;
-        height: 100vh;
+        height: 100%;
         justify-content: center;
         align-items: center;
         gap: 10px;
