updated contact png

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             <H1>Bailey Ross-Wray's Porfolio</H1>
             <p>
                 Take a look at my work bellow
-                <br />Please note: the site is not yet designed to scale with
+                <br />Please note: the site is not yet designed to scale completely with
                 mobile device screens
             </p>
             <hr width="500"/>
