--- a/index.html
+++ b/index.html
@@ -21,26 +21,26 @@
         
             <div class="project row-1-column-1">
                 <H2>Prodject Awack</H2>
-                <a href="../public/awack-prodject.html">
-                    <img src="../assets/images/awack-help-menu.png" alt="Prodject Awack - Image" width="200"
+                <a href="./public/awack-prodject.html">
+                    <img src="./assets/images/awack-help-menu.png" alt="Prodject Awack - Image" width="200"
                     height="200"></a>
             </div>
             <div class="project row-1-column-2">
                 <h2>About Page</h2>
-                <a href="../public/about.html">
-                    <img src="../assets/images/about-me.png" alt="About Me - Image" width="200"
+                <a href="./public/about.html">
+                    <img src="./assets/images/about-me.png" alt="About Me - Image" width="200"
                     height="200"></a>
             </div>
             <div class="project row-2-column-1">
                 <h2>Pricing Table</h2>
-                <a href="../public/pricing-table.html">
-                    <img src="../assets/images/pricing-table.png" alt="Pricing Table - Image" width="200" 
+                <a href="./public/pricing-table.html">
+                    <img src="./assets/images/pricing-table.png" alt="Pricing Table - Image" width="200" 
                     height="200"></a>
             </div>
             <div class="project row-2-column-2">
                 <h2>Password Generate Prodject</h2>
-                <a href="../public/password-gen-prodject.html">
-                    <img src="../assets/images/account-tool-menu.png" alt="Account Tool - Image" width="200" 
+                <a href="./public/password-gen-prodject.html">
+                    <img src="./assets/images/account-tool-menu.png" alt="Account Tool - Image" width="200" 
                     height="200"></a>
                     
             </div>
