fixed bug where a link caused a 404 error

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         </div>
         
             <div class="foot"><hr width="100%"/>
-                <h2 ><a id="contact-me" href="../public/contact.html">Contact me here</a></h2>
+                <h2 ><a id="contact-me" href="./public/contact.html">Contact me here</a></h2>
             </div>
     </div>
 
