changed link colour on index page

--- a/index.html
+++ b/index.html
@@ -146,6 +146,10 @@
             width: 350px;
             height: 350px;
         }
+        #contact-me{
+            color: black;
+            text-align: center;
+        }
         @media (max-width: 650px) {
             .flex-container{
                 display: flex;
