added link back to portfolio

--- a/public/bootstrap-example.html
+++ b/public/bootstrap-example.html
@@ -183,6 +183,10 @@
                 <span class="mb-3 mb-md-0 text-body-secondary">© 2023 Drives & Walks, Inc</span>
             </div>
 
+            <a href="../index.html" class="icon-link">
+                head back to my portfolio page
+            </a>
+
             <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
                 <li class="ms-3"><a class="text-body-secondary" href="#"><img src="../assets/images/instagram.svg" width="24px" height="24px" alt="Instagram Logo - Image"></a></li>
                 <li class="ms-3"><a class="text-body-secondary" href="#"><img src="../assets/images/twitter.svg" width="24px" height="24px" alt="Instagram Logo - Image"></a></li>
