changed button text

--- a/public/bootstrap-example.html
+++ b/public/bootstrap-example.html
@@ -69,12 +69,12 @@
             <img src="../assets/images/puppy.jpeg" alt="Puppy - Image" width="250px" height="200px">
             <h1 class="text-body-emphasis">Puppys Or Eldery</h1>
             <p class="col-lg-8 mx-auto fs-5 text-muted">
-                We walk your dogs when you dont have to. Need to go away but cant take the pup? no problem we can care for your older or youngest pets.
+                We walk your dogs when you dont have time. Need to go away but cant take the pup? no problem we can care for your older or youngest pets.
                 Want your pet to have a nice adventure but have work that day? We take all of our pawed clients for magical hikes, mythical beach stroles and beautifl camping retreats.
             </p>
             <div class="d-inline-flex gap-2 mb-5">
                 <button class="d-inline-flex align-items-center btn btn-primary btn-lg px-4 rounded-pill" type="button">
-                    About us
+                    Info
                     <svg class="bi ms-2" width="24" height="24"><use xlink:href="#arrow-right-short"></use></svg>
                 </button>
                 <button class="btn btn-outline-secondary btn-lg px-4 rounded-pill" type="button">
