aligned link to center better

--- a/public/bootstrap-example.html
+++ b/public/bootstrap-example.html
@@ -177,15 +177,15 @@
     <div class="container">
         <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
             <div class="col-md-4 d-flex align-items-center">
-                <a href="/" class="mb-3 me-2 mb-md-0 text-body-secondary text-decoration-none lh-1">
-                    <svg class="bi" width="30" height="24"><use xlink:href="#bootstrap"></use></svg>
-                </a>
-                <span class="mb-3 mb-md-0 text-body-secondary">© 2023 Drives & Walks, Inc</span>
+                <span class="mb-3 mx-4 text-body-secondary">© 2023 Drives & Walks, Inc</span>
             </div>
 
-            <a href="../index.html" class="icon-link">
-                head back to my portfolio page
-            </a>
+            <div class="col-md-4 d-flex pl-0 justify-content-center align-items-center">
+                <a href="../index.html" class="icon-link mb-3 mx-4 text-center">
+                    head back to my portfolio page
+                </a>
+            </div>
+            
 
             <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
                 <li class="ms-3"><a class="text-body-secondary" href="#"><img src="../assets/images/instagram.svg" width="24px" height="24px" alt="Instagram Logo - Image"></a></li>
