added short descriptions to projects

--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
             
             <h1>Bailey Ross-Wray's Porfolio</h1>
             <p>
-                Take a look at my work bellow
+                Take a look at my work below.
+                <br />Made with Flexbox, Grid and Media Queries
             </p>
             <hr width="50%"/>
         </div>
@@ -36,24 +37,28 @@
         
             <div class="project row-1-column-1">
                 <H2>Prodject Awack</H2>
+                <p>Made with Flexbox</p>
                 <a href="./public/awack-prodject.html">
                     <img src="./assets/images/awack-help-menu.png" alt="Prodject Awack - Image" width="200"
                     height="200"></a>
             </div>
             <div class="project row-1-column-2">
                 <h2>About Page</h2>
+                <p>Made with Media Queries</p>
                 <a href="./public/about.html">
                     <img src="./assets/images/about-me.png" alt="About Me - Image" width="200"
                     height="200"></a>
             </div>
             <div class="project row-2-column-1">
                 <h2>Flexbox Pricing Table</h2>
+                <p>Made with Flexbox</p>
                 <a href="./public/pricing-table.html">
                     <img src="./assets/images/pricing-table.png" alt="Pricing Table - Image" width="200" 
                     height="200"></a>
             </div>
             <div class="project row-2-column-2">
                 <h2>Password Generate Prodject</h2>
+                <p>Made with Flexbox</p>
                 <a href="./public/password-gen-prodject.html">
                     <img src="./assets/images/account-tool-menu.png" alt="Account Tool - Image" width="200" 
                     height="200"></a>
@@ -62,6 +67,7 @@
 
             <div class="project row-3-column-1">
                 <h2>Bootstrap Example Project</h2>
+                <p>Made with Bootstrap</p>
                 <a href="./public/bootstrap-example.html">
                     <img src="./assets/images/bootstrap-example-image.png" alt="Bootstrap Example - Image" width="200" 
                     height="200"></a>
