fixed spelling error

--- a/public/awack-prodject.html
+++ b/public/awack-prodject.html
@@ -49,7 +49,7 @@
             to add new features or fix bugs but hopfully in the future I will publish the bot to the public.
             Id like to make some more commands dealing with the Twitter API but for now I think the Bot has been a huge
             success and am very proud of the code aswell as the Bots functionality in servers. 
-            if youd like to add the bot to your surver thr link is
+            if youd like to add the bot to your server the link is
             <a href="https://discord.com/api/oauth2/authorize?client_id=938071040544878593&permissions=8&scope=bot">here.</a>
             </p>
             <hr />
