--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bailey's Porfolio</title>
+    <title>zzixM Devs Porfolio</title>
 </head>
 <body>
 
@@ -25,7 +25,7 @@
                 </div>
             </div>
             
-            <h1>Bailey Ross-Wray's Porfolio</h1>
+            <h1>zzixM Devs Porfolio</h1>
             <p>
                 Take a look at my work below.
                 <br />Made with Flexbox, Grid and Media Queries
